# harness-precommit

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  developer-onboarding.md  pyproject.toml
src/harness_precommit/: __init__.py  cli.py  validator.py
src/harness_precommit/schemas/: pipeline_schema.json
tests/: conftest.py  test_cli.py
tests/fixtures/: invalid_pipeline.yaml
tests/fixtures/artefacts/pipeline-templates/blue_green_release/: v1.0.0.yaml
tests/fixtures/artefacts/pipeline-templates/build_and_deploy/: v1.0.0.yaml
tests/fixtures/artefacts/pipeline-templates/canary_with_gate/: v1.0.0.yaml
tests/fixtures/artefacts/pipeline-templates/ci_cd_full/: v1.0.0.yaml
tests/fixtures/artefacts/pipeline-templates/db_and_deploy/: v1.0.0.yaml
tests/fixtures/artefacts/pipeline-templates/deploy_canary_service/: v1.1.0.yaml
tests/fixtures/artefacts/pipeline-templates/deploy_microservice/: v1.1.0.yaml
tests/fixtures/artefacts/pipeline-templates/full_release_pipeline/: v1.0.0.yaml
tests/fixtures/artefacts/pipeline-templates/helm_release/: v1.0.0.yaml
tests/fixtures/artefacts/pipeline-templates/integration_release/: v1.0.0.yaml
tests/fixtures/artefacts/pipeline-templates/run_migration/: v1.0.1.yaml
tests/fixtures/artefacts/pipeline-templates/security_hardened_deploy/: v1.0.0.yaml
tests/fixtures/artefacts/pipeline-templates/test_and_deploy/: v1.0.0.yaml
tests/fixtures/artefacts/pipelines/service_beta/: v1.0.0.yaml
tests/fixtures/artefacts/pipelines/service_delta/: v1.0.0.yaml
(+55 files in other folders)
