[project]
name = "harness-precommit"
version = "0.1.0"
description = "Local pre-commit schema validation for Harness pipeline YAML files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.23.0",
  "pyyaml>=6.0.2",
  "typer>=0.16.0",
]

[project.scripts]
harness-schema-hook = "harness_precommit.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["harness-schema"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/harness_precommit/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "pre-commit>=3.8.0",
  "pytest>=8.3.2",
  "ruff>=0.6.5",
]

[project.scripts]
harness-schema-hook = "harness_precommit.cli:app"
