[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "harness-precommit"
version = "0.1.0"
description = "Pre-commit hook for Harness pipeline YAML validation"
authors = [{name = "Harness Team"}]
requires-python = ">=3.11"
dependencies = [
    "typer >= 0.9.0",
    "pyyaml >= 6.0",
    "jsonschema >= 4.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "ruff >= 0.1.0",
]

[project.scripts]
harness-schema-hook = "harness_precommit.cli:app"
